--- a/index.html
+++ b/index.html
@@ -67,18 +67,31 @@ const datasets = {
     y: [1,1,1,-1,-1,-1],
     // Estructura: [LR][con/sin] -> iteraciones
     pesos: [
-      {con:[[ [1,1],[2,1],[3,1] ]], sin:[[ [0,1],[1,1],[2,1] ]]}, // LR 0.1
-      {con:[[ [1,0],[2,0],[3,0] ]], sin:[[ [0,0],[1,0],[2,0] ]]}, // LR 0.01
-      {con:[[ [0,2],[1,2],[2,2] ]], sin:[[ [0,1],[1,1],[1,2] ]]}  // LR 0.001
+      { con:[[1,1],[2,1],[3,1]], sin:[[0,1],[1,1],[2,1]] },
+      { con:[[1,0],[2,0],[3,0]], sin:[[0,0],[1,0],[2,0]] },
+      { con:[[0,2],[1,2],[2,2]], sin:[[0,1],[1,1],[1,2]] }
     ],
     sesgos: [
-      {con:[-3,-4,-5], sin:[0,0,0]},
-      {con:[-2,-3,-3], sin:[0,0,0]},
-      {con:[-1,-2,-2], sin:[0,0,0]}
+      { con:[-3,-4,-5], sin:[0,0,0] },
+      { con:[-2,-3,-3], sin:[0,0,0] },
+      { con:[-1,-2,-2], sin:[0,0,0] }
     ],
-    w_best: [[3,1],[2,0],[1,2]],
-    b_best: [-5,-3,-2],
-    error_best: [0.5,0.7,0.6]
+    w_best: [
+      { con:[3,1], sin:[2,1] },
+      { con:[2,0], sin:[1,0] },
+      { con:[1,2], sin:[1,1] }
+    ],
+    b_best:[
+      { con:-5, sin:0 },
+      { con:-3, sin:0 },
+      { con:-2, sin:0 }
+    ],
+    error_best:[
+      { con:0.5, sin:0.6 },
+      { con:0.7, sin:0.8 },
+      { con:0.6, sin:0.7 }
+    ]
+
   },
   "Dataset2": {
     X: [[1,2],[2,2],[3,3],[3,1],[0,1],[1,0]],
@@ -274,4 +287,5 @@ document.addEventListener("DOMContentLoaded",()=>document.getElementsByClassName
 </div>
 </body>
 </html>
+
 
