--- a/index.html
+++ b/index.html
@@ -14926,6 +14926,18 @@ const puntos = {
       name: "Hiperplano"
     });
 
+    // Dibuja el vector w desde el origen
+    const w_norm = Math.sqrt(w[0]*w[0] + w[1]*w[1]);
+    const scale = 2; // Puedes ajustar la longitud visual del vector
+    traces.push({
+      x: [0, w[0]/w_norm*scale],
+      y: [0, w[1]/w_norm*scale],
+      mode: "lines+markers",
+      marker: {color: "green", size: 8},
+      line: {color: "green", width: 4},
+      name: "Vector w"
+    });
+
     if(showBestFlag){
       const w_best = results.w_best;
       const b_best = results.b_best;
@@ -14940,8 +14952,8 @@ const puntos = {
     }
 
     Plotly.newPlot(`plot_${datasetName}`, traces, {
-      xaxis:{range:[xMin, xMax]},
-      yaxis:{range:[Math.min(...X.map(p=>p[1]))-1, Math.max(...X.map(p=>p[1]))+1]},
+      xaxis: {range: [-2, 8]},   // Escala fija en X
+      yaxis: {range: [-2, 8]},   // Escala fija en Y
       width:700, height:600,
       title: datasetName
     });
@@ -14964,233 +14976,3 @@ const puntos = {
 
 </body>
 </html>
-<script>
-const datasets = {
-  "Dataset1": {
-    X: [[2,3],[3,3],[4,2],[5,5],[1,1],[2,0]],
-    y: [1,1,1,-1,-1,-1],
-    // Estructura: [LR][con/sin] -> iteraciones
-    pesos: [
-      { con:[[1,1],[2,1],[3,1]], sin:[[0,1],[1,1],[2,1]] },
-      { con:[[1,0],[2,0],[3,0]], sin:[[0,0],[1,0],[2,0]] },
-      { con:[[0,2],[1,2],[2,2]], sin:[[0,1],[1,1],[1,2]] }
-    ],
-    sesgos: [
-      { con:[-3,-4,-5], sin:[0,0,0] },
-      { con:[-2,-3,-3], sin:[0,0,0] },
-      { con:[-1,-2,-2], sin:[0,0,0] }
-    ],
-    w_best: [
-      { con:[3,1], sin:[2,1] },
-      { con:[2,0], sin:[1,0] },
-      { con:[1,2], sin:[1,1] }
-    ],
-    b_best:[
-      { con:-5, sin:0 },
-      { con:-3, sin:0 },
-      { con:-2, sin:0 }
-    ],
-    error_best:[
-      { con:0.5, sin:0.6 },
-      { con:0.7, sin:0.8 },
-      { con:0.6, sin:0.7 }
-    ]
-
-  },
-  "Dataset2": {
-    X: [[1,2],[2,2],[3,3],[3,1],[0,1],[1,0]],
-    y: [1,1,1,-1,-1,-1],
-    pesos: [
-      {con:[[ [1,2],[2,2],[2,3] ]], sin:[[ [0,1],[1,1],[1,2] ]]},
-      {con:[[ [2,1],[2,2],[3,2] ]], sin:[[ [1,1],[1,2],[2,2] ]]},
-      {con:[[ [1,1],[2,1],[3,1] ]], sin:[[ [0,0],[1,0],[2,0] ]]}
-    ],
-    sesgos:[
-      {con:[-2,-3,-3], sin:[0,0,0]},
-      {con:[-1,-2,-2], sin:[0,0,0]},
-      {con:[-3,-2,-1], sin:[0,0,0]}
-    ],
-    w_best: [[2,3],[3,2],[1,1]],
-    b_best: [-3,-2,-1],
-    error_best: [0.7,0.5,0.6]
-  }
-};
-
-for (let key in datasets){
-    const X = datasets[key].X;
-    datasets[key].xMin = Math.min(...X.map(p=>p[0])) - 1;
-    datasets[key].xMax = Math.max(...X.map(p=>p[0])) + 1;
-    datasets[key].yMin = Math.min(...X.map(p=>p[1])) - 1;
-    datasets[key].yMax = Math.max(...X.map(p=>p[1])) + 1;
-}
-
-function openDataset(evt, datasetName) {
-  let tabcontent = document.getElementsByClassName("tabcontent");
-  for (let i=0; i<tabcontent.length; i++) { tabcontent[i].style.display = "none"; }
-  let tablinks = document.getElementsByClassName("tablinks");
-  for (let i=0; i<tablinks.length; i++) { tablinks[i].className = tablinks[i].className.replace(" active", ""); }
-  document.getElementById(datasetName).style.display = "block";
-  evt.currentTarget.className += " active";
-  updatePlot(datasetName);
-}
-
-function updatePlot(datasetName, showBestFlag=false){
-  const data = datasets[datasetName];
-  const slider = document.getElementById(datasetName=="Dataset1"?"slider1":"slider2");
-  const lrIdx = parseInt(document.getElementById(datasetName=="Dataset1"?"lr1":"lr2").value);
-  const usarSesgo = document.getElementById(datasetName=="Dataset1"?"sesgo1":"sesgo2").checked ? "con" : "sin";
-
-  let iter = parseInt(slider.value);
-  if(showBestFlag) iter = data.pesos[lrIdx][usarSesgo].length-1;
-
-  let traces = [];
-  // puntos
-  traces.push({
-    x: data.X.map(p=>p[0]),
-    y: data.X.map(p=>p[1]),
-    mode: "markers",
-    marker: {color: data.y.map(v=>v==1?"blue":"red")},
-    name: "Datos",
-    text: data.y.map(v=>"Clase "+v),
-    hoverinfo:"text+x+y"
-  });
-
-  // vector w
-  const w = data.pesos[lrIdx][usarSesgo][iter];
-  const b = data.sesgos[lrIdx][usarSesgo][iter];
-  traces.push({
-    x:[0,w[0]],
-    y:[0,w[1]],
-    mode:"lines+markers",
-    line:{color:"green", width:3},
-    name:"Vector w",
-    text:[`w0=0,w1=0`,`w0=${w[0]},w1=${w[1]},b=${b}`],
-    hoverinfo:"text"
-  });
-
-  // hiperplano
-  const x_vals = [], y_vals = [];
-  for(let i=data.xMin; i<=data.xMax; i+=0.1){
-    x_vals.push(i);
-    y_vals.push(-(w[0]*i + b)/w[1]);
-  }
-  traces.push({x:x_vals, y:y_vals, mode:"lines", line:{color:"black", dash:"dash"}, name:"Hiperplano"});
-
-  // Mejor w
-  if(showBestFlag){
-    const w_best = data.w_best[lrIdx], b_best = data.b_best[lrIdx], err_best = data.error_best[lrIdx];
-    const x_best = [], y_best = [];
-    for(let i=data.xMin;i<=data.xMax;i+=0.1){ x_best.push(i); y_best.push(-(w_best[0]*i + b_best)/w_best[1]); }
-    traces.push({x:[0,w_best[0]],y:[0,w_best[1]],mode:"lines+markers",line:{color:"orange",width:4},name:`Mejor w (Error=${err_best})`});
-    traces.push({x:x_best,y:y_best,mode:"lines",line:{color:"orange",dash:"dot",width:4},name:"Hiperplano mejor w"});
-  }
-
-  Plotly.newPlot(datasetName=="Dataset1"?"plot1":"plot2", traces,{
-    xaxis:{range:[-1,6]},
-    yaxis:{range:[-1,6]},
-    width:700,height:600,
-    title: datasetName
-  });
-}
-
-function showBest(datasetName){ updatePlot(datasetName,true); }
-
-document.addEventListener("DOMContentLoaded", function(){ document.getElementsByClassName("tablinks")[0].click(); });
-</script>
-
-</body>
-</html>
-// ===== Render de controles y plot para cada dataset =====
-for(const key in datasets){
-  const container = document.getElementById(key);
-  container.innerHTML = `
-    <h2>${key}</h2>
-    <div class="controls">
-      <label><input type="checkbox" id="${key}_sesgo" checked onchange="updatePlot('${key}')"> Usar sesgo</label>
-      <label>Learning Rate:
-        <select id="${key}_lr" onchange="updatePlot('${key}')">
-          <option value="0">LR 0.01</option>
-          <option value="1">LR 0.05</option>
-          <option value="2">LR 0.1</option>
-        </select>
-      </label>
-      Iteración: <input type="range" id="${key}_slider" min="0" max="2" step="1" value="0" oninput="updatePlot('${key}')">
-      <button onclick="showBest('${key}')">Mostrar Mejor Peso</button>
-    </div>
-    <div id="${key}_plot" class="plot-container"></div>
-  `;
-}
-
-// ===== Pestañas =====
-function openDataset(evt,datasetName){
-  const tabcontent = document.getElementsByClassName("tabcontent");
-  for(let i=0;i<tabcontent.length;i++) tabcontent[i].style.display="none";
-  const tablinks = document.getElementsByClassName("tablinks");
-  for(let i=0;i<tablinks.length;i++) tablinks[i].className=tablinks[i].className.replace(" active","");
-  document.getElementById(datasetName).style.display="block";
-  evt.currentTarget.className+=" active";
-  updatePlot(datasetName);
-}
-
-// ===== Actualización del plot =====
-function updatePlot(datasetName, showBestFlag=false){
-  const data = datasets[datasetName];
-  const usarSesgo = document.getElementById(datasetName+"_sesgo").checked ? 0 : 1;
-  const lr_idx = parseInt(document.getElementById(datasetName+"_lr").value);
-  const slider = document.getElementById(datasetName+"_slider");
-  let iter = parseInt(slider.value);
-  if(showBestFlag) iter = data.pesos[usarSesgo][lr_idx].length-1;
-
-  const w = data.pesos[usarSesgo][lr_idx][iter];
-  const b = data.sesgos[usarSesgo][lr_idx][iter];
-
-  let traces = [];
-  // Puntos
-  traces.push({
-    x: data.X.map(p=>p[0]),
-    y: data.X.map(p=>p[1]),
-    mode:"markers",
-    marker:{color:data.y.map(v=>v==1?"blue":"red"), size:10},
-    name:"Datos"
-  });
-
-  // Vector w
-  traces.push({x:[0,w[0]], y:[0,w[1]], mode:"lines+markers", line:{color:"green",width:3}, name:"Vector w"});
-
-  // Hiperplano
-  const x_vals=[], y_vals=[];
-  const xMin = Math.min(...data.X.map(p=>p[0]))-1;
-  const xMax = Math.max(...data.X.map(p=>p[0]))+1;
-  for(let i=xMin;i<=xMax;i+=0.1){ x_vals.push(i); y_vals.push(-(w[0]*i+b)/w[1]); }
-  traces.push({x:x_vals, y:y_vals, mode:"lines", line:{color:"black", dash:"dash"}, name:"Hiperplano"});
-
-  // Mejor peso
-  if(showBestFlag){
-    const w_best = data.w_best[usarSesgo][lr_idx];
-    const b_best = data.b_best[usarSesgo][lr_idx];
-    const error_best = data.error_best[usarSesgo][lr_idx];
-    const x_best=[], y_best=[];
-    for(let i=xMin;i<=xMax;i+=0.1){ x_best.push(i); y_best.push(-(w_best[0]*i+b_best)/w_best[1]); }
-    traces.push({x:[0,w_best[0]], y:[0,w_best[1]], mode:"lines+markers", line:{color:"orange",width:4}, name:`Mejor w (Error=${error_best})`});
-    traces.push({x:x_best, y:y_best, mode:"lines", line:{color:"orange", dash:"dot", width:4}, name:"Hiperplano mejor w"});
-  }
-
-  Plotly.newPlot(datasetName+"_plot", traces, {
-    xaxis:{range:[xMin-1,xMax+1]}, yaxis:{range:[xMin-1,xMax+1]},
-    width:800, height:600, title:datasetName
-  });
-}
-
-// Botón Mejor Peso
-function showBest(datasetName){ updatePlot(datasetName,true); }
-
-// Abrir primera pestaña
-document.addEventListener("DOMContentLoaded",()=>document.getElementsByClassName("tablinks")[0].click());
-</script>
-
-</div>
-</body>
-</html>
-
-
-
